--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>McheyneBibleReadingPlan</title>
+    <title>Mcheyne Bible Reading Plan</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     {{content-for "head"}}
 
@@ -14,7 +14,7 @@
 
     {{content-for "head-footer"}}
   </head>
-  <body>
+  <body class='bg-light'>
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
